// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть 9 неоплаченных штрафов в превью на карточке 1`] = `
Object {
  "body": Object {
    "billing": null,
    "healthScore": null,
    "reloadParams": null,
    "report": Object {
      "additional_data": AdditionalData {
        "catalogData": Array [],
        "cheapeningGraphData": Array [],
        "dtpData": Array [],
        "enrichedFeaturesData": Array [],
        "enrichedReviewsData": Array [],
        "featuresData": Array [],
        "imagesData": Array [],
        "imagesDataDark": Array [],
        "mileagesGraphData": Array [],
        "offerInfo": undefined,
        "pieGraphData": Array [],
        "priceData": Array [],
        "priceStatsData": Array [],
        "price_data": Array [],
        "reloadData": Array [],
        "reviewsData": Array [],
        "servicePrices": Array [],
        "shouldShowCommentsPopup": false,
        "title": "",
        "userRatingData": Array [],
      },
      "layout": "
<stack id=\\"vin_report\\" backgroundColor=\\"FFFFFF\\" backgroundColorDark=\\"1C1C1E\\" backgroundColorID=\\"45\\" flexDirection=\\"column\\" padding=\\"{0,16,0,16}\\">
	<stack padding=\\"{24, 0, 8, 0}\\" justifyContent=\\"spaceBetween\\">
		<stack flexDirection=\\"column\\">
			<text fontSize=\\"20\\" fontWeight=\\"bold\\" margin=\\"{0, 0, 4, 0}\\" text=\\"Отчёт о&#160;проверке по&#160;VIN\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
			<text fontSize=\\"14\\" text=\\"XWEGN411DJ0001216\\" textSelectable=\\"true\\" visible=\\"true\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/>
		</stack>
		<image height=\\"18\\" width=\\"86\\" contentMode=\\"scaleAspectFill\\" margin=\\"{4, 0, 0, 0}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/pro-auto/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/pro-auto/dark.png\\"/>
	</stack>
	<stack flexDirection=\\"column\\">
		<stack flexDirection=\\"column\\">
			<ignore/>
			<ignore/>
		</stack>
		<stack flexDirection=\\"column\\">
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Характеристики совпадают с&#160;ПТС\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Данные о&#160;запрете на&#160;регистрацию не&#160;найдены\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Данные о&#160;нахождении в&#160;розыске не&#160;найдены\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<ignore/>
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Данные о&#160;залоге не&#160;найдены\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Поиск расчётов стоимости ремонта\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<text id=\\"expandItemsButton\\" flex=\\"1\\" fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{12, 40, 8, 0}\\" onTapShow=\\"collapsedItems\\" onTapHide=\\"expandItemsButton\\" text=\\"Ещё 5&#160;источников\\" textColor=\\"2276D3\\" textColorDark=\\"4AA6FF\\" textColorID=\\"49\\"/>
			<stack id=\\"collapsedItems\\" flexDirection=\\"column\\" visible=\\"false\\">
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Опции по VIN\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/help/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/help/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Страховые полисы\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Рейтинг модели\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Отзывы и&#160;рейтинг\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Характеристики\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<text id=\\"collapseItemsButton\\" flex=\\"1\\" fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{12, 40, 8, 0}\\" onTapHide=\\"collapsedItems\\" onTapShow=\\"expandItemsButton\\" text=\\"Свернуть\\" textColor=\\"2276D3\\" textColorDark=\\"4AA6FF\\" textColorID=\\"49\\"/>
			</stack>
		</stack>
		<stack alignItems=\\"center\\" backgroundColor=\\"E2EFFD\\" backgroundColorDark=\\"636366\\" backgroundColorID=\\"52\\" cornerRadius=\\"8\\" flex=\\"1\\" flexDirection=\\"column\\" height=\\"48\\" justifyContent=\\"center\\" margin=\\"{16, 0, 16, 0}\\" onTapAction=\\"showReport\\">
			<text fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{0, 0, 2, 0}\\" text=\\"Смотреть полный отчёт\\" textColor=\\"0C78ED\\" textColorDark=\\"FFFFFF\\" textColorID=\\"53\\"/>
		</stack>
	</stack>
</stack>
",
      "report_type": "PAID_REPORT",
      "status": "OK",
      "vin": "XWEGN411DJ0001216",
    },
  },
  "headers": Object {
    "content-type": "application/json",
  },
}
`;

exports[`должен вернуть карточку по offer_id 1`] = `
Object {
  "body": Object {
    "billing": null,
    "healthScore": null,
    "reloadParams": Object {},
    "report": Object {
      "additional_data": AdditionalData {
        "catalogData": Array [],
        "cheapeningGraphData": Array [],
        "dtpData": Array [],
        "enrichedFeaturesData": Array [],
        "enrichedReviewsData": Array [],
        "featuresData": Array [],
        "imagesData": Array [],
        "imagesDataDark": Array [],
        "mileagesGraphData": Array [],
        "offerInfo": Object {
          "offer_id": "1101170437-b1df3307",
        },
        "pieGraphData": Array [],
        "priceData": Array [],
        "priceStatsData": Array [],
        "price_data": Array [],
        "reloadData": Array [],
        "reviewsData": Array [],
        "servicePrices": Array [],
        "shouldShowCommentsPopup": false,
        "title": "",
        "userRatingData": Array [],
      },
      "layout": "
<stack id=\\"vin_report\\" backgroundColor=\\"FFFFFF\\" backgroundColorDark=\\"1C1C1E\\" backgroundColorID=\\"45\\" flexDirection=\\"column\\" padding=\\"{0,16,0,16}\\">
	<stack padding=\\"{24, 0, 8, 0}\\" justifyContent=\\"spaceBetween\\">
		<stack flexDirection=\\"column\\">
			<text fontSize=\\"20\\" fontWeight=\\"bold\\" margin=\\"{0, 0, 4, 0}\\" text=\\"Отчёт о&#160;проверке по&#160;VIN\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
			<text fontSize=\\"14\\" text=\\"YV1RS595972624797\\" textSelectable=\\"true\\" visible=\\"true\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/>
		</stack>
		<image height=\\"18\\" width=\\"86\\" contentMode=\\"scaleAspectFill\\" margin=\\"{4, 0, 0, 0}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/pro-auto/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/pro-auto/dark.png\\"/>
	</stack>
	<stack flexDirection=\\"column\\">
		<stack flexDirection=\\"column\\">
			<ignore/>
			<ignore/>
		</stack>
		<stack flexDirection=\\"column\\">
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Характеристики совпадают с&#160;ПТС\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Данные о&#160;запрете на&#160;регистрацию не&#160;найдены\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Данные о&#160;нахождении в&#160;розыске не&#160;найдены\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<ignore/>
			<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
				<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
				<stack flex=\\"1\\" flexDirection=\\"column\\">
					<text fontSize=\\"14\\" text=\\"Данные о&#160;залоге не&#160;найдены\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
					<ignore/>
				</stack>
			</stack>
			<text id=\\"expandItemsButton\\" flex=\\"1\\" fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{12, 40, 8, 0}\\" onTapShow=\\"collapsedItems\\" onTapHide=\\"expandItemsButton\\" text=\\"Ещё 4&#160;источника\\" textColor=\\"2276D3\\" textColorDark=\\"4AA6FF\\" textColorID=\\"49\\"/>
			<stack id=\\"collapsedItems\\" flexDirection=\\"column\\" visible=\\"false\\">
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Опции по VIN\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Рейтинг модели\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Отзывы и&#160;рейтинг\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<stack alignItems=\\"center\\" minHeight=\\"24\\" onTapAction=\\"showReport\\" padding=\\"{8, 0, 0, 0}\\">
					<image aspectRatio=\\"1\\" height=\\"24\\" margin=\\"{0, 0, 0, 16}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\"/>
					<stack flex=\\"1\\" flexDirection=\\"column\\">
						<text fontSize=\\"14\\" text=\\"Характеристики\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/>
						<ignore/>
					</stack>
				</stack>
				<text id=\\"collapseItemsButton\\" flex=\\"1\\" fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{12, 40, 8, 0}\\" onTapHide=\\"collapsedItems\\" onTapShow=\\"expandItemsButton\\" text=\\"Свернуть\\" textColor=\\"2276D3\\" textColorDark=\\"4AA6FF\\" textColorID=\\"49\\"/>
			</stack>
		</stack>
		<stack alignItems=\\"center\\" backgroundColor=\\"E2EFFD\\" backgroundColorDark=\\"636366\\" backgroundColorID=\\"52\\" cornerRadius=\\"8\\" flex=\\"1\\" flexDirection=\\"column\\" height=\\"48\\" justifyContent=\\"center\\" margin=\\"{16, 0, 16, 0}\\" onTapAction=\\"showReport\\">
			<text fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{0, 0, 2, 0}\\" text=\\"Смотреть полный отчёт\\" textColor=\\"0C78ED\\" textColorDark=\\"FFFFFF\\" textColorID=\\"53\\"/>
		</stack>
	</stack>
</stack>
",
      "report_type": "PAID_REPORT",
      "status": "OK",
      "vin": "YV1RS595972624797",
    },
  },
  "headers": Object {
    "content-type": "application/json",
  },
}
`;
